--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     Idea:
     <span class="genre">A video game</span> where you <span class="action">perform actions on</span> <span class="things">things</span>    <span class="goals">to achieve goals</span>.
   </div>
-  <script src="https://cdn.rawgit.com/SarahSexton/Game-Idea-Generator/master/GameGen.js"></script>
+  <script src="GameGen.js"></script>
 </body>
 </html>
