--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-<head>
+<head lang="en-US">
   <title>Game Idea Generator</title>
   <link rel="stylesheet" href="style.css">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Chelsea Market:700,400' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -12,6 +13,6 @@
     Idea:
     <span class="genre">A video game</span> where you <span class="action">perform actions on</span> <span class="things">things</span>    <span class="goals">to achieve goals</span>.
   </div>
-  <script src="https://cdn.rawgit.com/SarahSexton/Game-Idea-Generator/master/GameGen.js"></script>
+  <script src="GameGen.js"></script>
 </body>
 </html>
