Radial gradient + jQuery removal

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <title>Game Idea Generator</title>
   <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Chelsea Market:700,400' rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -11,7 +10,7 @@
   <p>HOVER OVER THE TYPE OF GAME TO SEE IT CHANGE</p>
   <div id="box">
     Idea:
-    <span class="genre">A video game</span> where you <span class="action">perform actions on</span> <span class="things">things</span>    <span class="goals">to achieve goals</span>.
+    <span id="genre">A video game</span> where you <span id="action">perform actions on</span> <span id="things">things</span>    <span id="goals">to achieve goals</span>.
   </div>
   <script src="GameGen.js"></script>
 </body>
